<resources>
    <string name="app_name">VehicleTrackerSystemApp</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="solicitar_veh_culo">Solicitar Vehículo</string>
    <string name="reportar_aver_as">Reportar Averías</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrese_destino">Ingrese Destino</string>
    <string name="parque_ulloa">Parque Ulloa</string>
    <string name="justificaci_n">Justificación</string>
    <string name="entrega_de_material">Entrega de material</string>
    <string name="realizar_solicitud">Realizar Solicitud</string>
</resources>
