<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".FragmentSolicitarVhiculo">

    <!-- TODO: Update blank fragment layout -->

    <Spinner
        android:id="@+id/listaVehiculos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="@string/ingrese_destino"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campoDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/parque_ulloa"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/justificaci_n"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campoJustificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/entrega_de_material"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="35dp"
        android:background="@color/colorPrimary"
        android:text="@string/realizar_solicitud"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />
</LinearLayout>